# emily/handler/src/context.rs
@@ -29,8 +29,8 @@ pub struct Settings {
     pub withdrawal_table_name: String,
     /// Chainstate table name.
     pub chainstate_table_name: String,
-    /// Slowdown table name.
-    pub slowdown_table_name: String,
+    /// Throttle table name.
+    pub throttle_table_name: String,
     /// Limit table name.
     pub limit_table_name: String,
     /// The default global limits for the system.
@@ -68,7 +68,7 @@ impl fmt::Debug for EmilyContext {
                 &self.settings.chainstate_table_name,
             )
             .field("limit_table_name", &self.settings.limit_table_name)
-            .field("slowdown_table_name", &self.settings.slowdown_table_name)
+            .field("throttle_table_name", &self.settings.throttle_table_name)
             .field("default_limits", &self.settings.default_limits)
             .field("is_mainnet", &self.settings.is_mainnet)
             .field("version", &self.settings.version)
@@ -96,7 +96,7 @@ impl Settings {
             withdrawal_table_name: env::var("WITHDRAWAL_TABLE_NAME")?,
             chainstate_table_name: env::var("CHAINSTATE_TABLE_NAME")?,
             limit_table_name: env::var("LIMIT_TABLE_NAME")?,
-            slowdown_table_name: env::var("SLOWDOWN_TABLE_NAME")?,
+            throttle_table_name: env::var("THROTTLEDOWN_TABLE_NAME")?,
             default_limits: AccountLimits {
                 peg_cap: env::var("DEFAULT_PEG_CAP")
                     .ok()
@@ -122,7 +122,7 @@ impl Settings {
                     .ok()
                     .map(|v| v.parse())
                     .transpose()?,
-                slow_mode_initiator: None,
+                throttle_mode_initiator: None,
             },
             is_mainnet: env::var("IS_MAINNET")?.to_lowercase() == "true",
             version: env::var("VERSION")?,
@@ -168,7 +168,7 @@ impl EmilyContext {
         let dynamodb_client = Client::new(&sdk_config);
 
         let tables_to_find: Vec<&str> =
-            vec!["Deposit", "Chainstate", "Withdrawal", "Limit", "Slowdown"];
+            vec!["Deposit", "Chainstate", "Withdrawal", "Limit", "Throttle"];
         let mut table_name_map: HashMap<&str, String> = HashMap::new();
 
         if skip_tables {
@@ -218,9 +218,9 @@ impl EmilyContext {
                     .get("Limit")
                     .expect("Couldn't find valid limit table table in existing table list.")
                     .to_string(),
-                slowdown_table_name: table_name_map
-                    .get("Slowdown")
-                    .expect("Couldn't find valid slowdown table table in existing table list.")
+                throttle_table_name: table_name_map
+                    .get("Throttle")
+                    .expect("Couldn't find valid throttle table table in existing table list.")
                     .to_string(),
                 default_limits: AccountLimits::default(),
                 is_mainnet: false,
