# emily/handler/src/database/accessors.rs
@@ -43,8 +43,8 @@ use super::entries::{
         WithdrawalTableSecondaryIndex, WithdrawalUpdatePackage,
     },
 };
-use crate::database::entries::slowdown::{
-    SlowdownKeyEntry, SlowdownKeyEntryKey, SlowdownTablePrimaryIndex,
+use crate::database::entries::throttle::{
+    ThrottleKeyEntry, ThrottleKeyEntryKey, ThrottleTablePrimaryIndex,
 };
 use crate::{
     api::models::common::{DepositStatus, WithdrawalStatus},
@@ -862,7 +862,7 @@ pub async fn get_limits(context: &EmilyContext) -> Result<Limits, Error> {
         per_withdrawal_cap: default_global_cap.per_withdrawal_cap,
         rolling_withdrawal_blocks: default_global_cap.rolling_withdrawal_blocks,
         rolling_withdrawal_cap: default_global_cap.rolling_withdrawal_cap,
-        slow_mode_initiator: default_global_cap.slow_mode_initiator,
+        throttle_mode_initiator: default_global_cap.throttle_mode_initiator,
     };
 
     // Aggregate all the latest entries by account.
@@ -920,7 +920,7 @@ pub async fn get_limits(context: &EmilyContext) -> Result<Limits, Error> {
         rolling_withdrawal_blocks: global_cap.rolling_withdrawal_blocks,
         rolling_withdrawal_cap: global_cap.rolling_withdrawal_cap,
         account_caps,
-        slow_mode_initiator: global_cap.slow_mode_initiator,
+        throttle_mode_initiator: global_cap.throttle_mode_initiator,
     })
 }
 
@@ -953,25 +953,25 @@ pub async fn set_limit_for_account(
     put_entry::<LimitTablePrimaryIndex>(context, limit).await
 }
 
-// Slowdown keys ---------------------------------------------------------------
+// Throttle keys ---------------------------------------------------------------
 
-/// Get list of all slowdown keys.
-pub async fn get_slowdown_keys_list(
+/// Get list of all throttle keys.
+pub async fn get_throttle_keys_list(
     _context: &EmilyContext,
-) -> Result<Vec<SlowdownKeyEntry>, Error> {
+) -> Result<Vec<ThrottleKeyEntry>, Error> {
     todo!()
 }
 
-/// Get slowdown key by key name.
-pub async fn get_slowdown_key(
+/// Get throttle key by key name.
+pub async fn get_throttle_key(
     context: &EmilyContext,
     hash: &String,
-) -> Result<SlowdownKeyEntry, Error> {
-    let resp = query_with_partition_key::<SlowdownTablePrimaryIndex>(context, hash, None, None)
+) -> Result<ThrottleKeyEntry, Error> {
+    let resp = query_with_partition_key::<ThrottleTablePrimaryIndex>(context, hash, None, None)
         .await?
         .0;
     if resp.len() > 1 {
-        return Err(Error::TooManySlowdownEntries(hash.clone()));
+        return Err(Error::TooManyThrottleEntries(hash.clone()));
     }
     if resp.is_empty() {
         return Err(Error::NotFound);
@@ -979,14 +979,14 @@ pub async fn get_slowdown_key(
     Ok(resp[0].clone())
 }
 
-/// Add new slowdown key
-pub async fn add_slowdown_key(context: &EmilyContext, key: &SlowdownKeyEntry) -> Result<(), Error> {
-    let res = get_slowdown_key(context, &key.key.hash).await;
+/// Add new throttle key
+pub async fn add_throttle_key(context: &EmilyContext, key: &ThrottleKeyEntry) -> Result<(), Error> {
+    let res = get_throttle_key(context, &key.key.hash).await;
     if res.is_ok() {
         tracing::warn!(
             name = %key.name,
             hash = %key.key.hash,
-            "Attempt to insert duplicate slowdown key",
+            "Attempt to insert duplicate throttle key",
         );
         return Err(Error::Conflict);
     }
@@ -997,17 +997,17 @@ pub async fn add_slowdown_key(context: &EmilyContext, key: &SlowdownKeyEntry) ->
         ));
     }
 
-    put_entry::<SlowdownTablePrimaryIndex>(context, key).await
+    put_entry::<ThrottleTablePrimaryIndex>(context, key).await
 }
 
-/// Activate slowdown key. Now it will be eligible to start slow mode.
-pub async fn activate_slowdown_key(context: &EmilyContext, hash: String) -> Result<(), Error> {
+/// Activate throttle key. Now it will be eligible to start throttle mode.
+pub async fn activate_throttle_key(context: &EmilyContext, hash: String) -> Result<(), Error> {
     // TODO: maybe we want to bail if key already active.
-    let timestamp = get_slowdown_key(context, &hash).await?.key.created_at;
+    let timestamp = get_throttle_key(context, &hash).await?.key.created_at;
 
-    let table_name = context.settings.slowdown_table_name.clone();
-    let partition_key_name = SlowdownKeyEntryKey::PARTITION_KEY_NAME;
-    let sort_key_name = SlowdownKeyEntryKey::SORT_KEY_NAME;
+    let table_name = context.settings.throttle_table_name.clone();
+    let partition_key_name = ThrottleKeyEntryKey::PARTITION_KEY_NAME;
+    let sort_key_name = ThrottleKeyEntryKey::SORT_KEY_NAME;
     context
         .dynamodb_client
         .update_item()
@@ -1027,14 +1027,14 @@ pub async fn activate_slowdown_key(context: &EmilyContext, hash: String) -> Resu
     Ok(())
 }
 
-/// Deactivate slowdown key. Now it will be unable to activate slow mode.
-pub async fn deactivate_slowdown_key(context: &EmilyContext, hash: String) -> Result<(), Error> {
+/// Deactivate throttle key. Now it will be unable to activate throttle mode.
+pub async fn deactivate_throttle_key(context: &EmilyContext, hash: String) -> Result<(), Error> {
     // TODO: maybe we want to bail if key already deactivated.
-    let timestamp = get_slowdown_key(context, &hash).await?.key.created_at;
+    let timestamp = get_throttle_key(context, &hash).await?.key.created_at;
 
-    let table_name = context.settings.slowdown_table_name.clone();
-    let partition_key_name = SlowdownKeyEntryKey::PARTITION_KEY_NAME;
-    let sort_key_name = SlowdownKeyEntryKey::SORT_KEY_NAME;
+    let table_name = context.settings.throttle_table_name.clone();
+    let partition_key_name = ThrottleKeyEntryKey::PARTITION_KEY_NAME;
+    let sort_key_name = ThrottleKeyEntryKey::SORT_KEY_NAME;
     context
         .dynamodb_client
         .update_item()
@@ -1054,10 +1054,10 @@ pub async fn deactivate_slowdown_key(context: &EmilyContext, hash: String) -> Re
     Ok(())
 }
 
-/// Enum, representing if key is eligible to activate slow mode
+/// Enum, representing if key is eligible to activate throttle mode
 pub enum KeyVerificationResult {
-    /// This key is eligible to start slow mode
-    /// Internally contains name of the key initiated slow mode
+    /// This key is eligible to start throttle mode
+    /// Internally contains name of the key initiated throttle mode
     Eligible(String),
     /// This key is known, but has been revoked.
     Revoked,
@@ -1066,19 +1066,19 @@ pub enum KeyVerificationResult {
 }
 
 impl KeyVerificationResult {
-    /// Returns true if the key is eligible to start slow mode, and false otherwise.
+    /// Returns true if the key is eligible to start throttle mode, and false otherwise.
     pub fn is_eligible(&self) -> bool {
         matches!(self, KeyVerificationResult::Eligible(_))
     }
 }
 
-/// Verify if given key_name + secret eligible to start slow mode
-pub async fn verify_slowdown_key(
+/// Verify if given key_name + secret eligible to start throttle mode
+pub async fn verify_throttle_key(
     context: &EmilyContext,
     hash: &String,
     secret: &String,
 ) -> Result<KeyVerificationResult, Error> {
-    let key = get_slowdown_key(context, hash).await?;
+    let key = get_throttle_key(context, hash).await?;
     if &key.key.hash != hash {
         return Err(Error::NotFound);
     }
@@ -1106,14 +1106,14 @@ pub async fn wipe_all_tables(context: &EmilyContext) -> Result<(), Error> {
     wipe_withdrawal_table(context).await?;
     wipe_chainstate_table(context).await?;
     wipe_limit_table(context).await?;
-    wipe_slowdown_table(context).await?;
+    wipe_throttle_table(context).await?;
     Ok(())
 }
 
-/// Wipes the slowdown table.
+/// Wipes the throttle table.
 #[cfg(feature = "testing")]
-async fn wipe_slowdown_table(context: &EmilyContext) -> Result<(), Error> {
-    wipe::<SlowdownTablePrimaryIndex>(context).await
+async fn wipe_throttle_table(context: &EmilyContext) -> Result<(), Error> {
+    wipe::<ThrottleTablePrimaryIndex>(context).await
 }
 
 /// Wipes the deposit table.
