# emily/openapi-gen/generated-specs/private-emily-openapi-spec.json
@@ -1689,13 +1689,107 @@
         }
       }
     },
-    "/slowdown": {
+    "/start_throttle": {
+      "post": {
+        "tags": [
+          "throttle"
+        ],
+        "summary": "Try to turn on throttle mode",
+        "operationId": "startThrottle",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ThrottleReqwest"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Throttle started successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Limits"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Failed key verification",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Key is revoked",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Throttle key not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal server error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          }
+        },
+        "x-amazon-apigateway-integration": {
+          "httpMethod": "POST",
+          "type": "aws_proxy",
+          "uri": {
+            "Fn::Sub": "arn:${AWS::Partition}:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${OperationLambda}/invocations"
+          }
+        }
+      },
+      "options": {
+        "tags": [
+          "CORS"
+        ],
+        "summary": "CORS support",
+        "description": "Handles CORS preflight requests",
+        "parameters": [],
+        "responses": {},
+        "x-amazon-apigateway-integration": {
+          "httpMethod": "POST",
+          "type": "aws_proxy",
+          "uri": {
+            "Fn::Sub": "arn:${AWS::Partition}:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${OperationLambda}/invocations"
+          }
+        }
+      }
+    },
+    "/throttle": {
       "get": {
         "tags": [
-          "slowdown"
+          "throttle"
         ],
-        "summary": "Get the slowdown key details.",
-        "operationId": "getSlowdownKey",
+        "summary": "Get the throttle key details.",
+        "operationId": "getThrottleKey",
         "requestBody": {
           "content": {
             "text/plain": {
@@ -1708,17 +1802,17 @@
         },
         "responses": {
           "200": {
-            "description": "Slowdown key retrieved successfully",
+            "description": "Throttle key retrieved successfully",
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/SlowdownKey"
+                  "$ref": "#/components/schemas/ThrottleKey"
                 }
               }
             }
           },
           "404": {
-            "description": "Slowdown key not found",
+            "description": "Throttle key not found",
             "content": {
               "application/json": {
                 "schema": {
@@ -1763,15 +1857,15 @@
       },
       "post": {
         "tags": [
-          "slowdown"
+          "throttle"
         ],
-        "summary": "Add slowdown key handler.",
-        "operationId": "addSlowdownKey",
+        "summary": "Add throttle key handler.",
+        "operationId": "addThrottleKey",
         "requestBody": {
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/SlowdownKey"
+                "$ref": "#/components/schemas/ThrottleKey"
               }
             }
           },
@@ -1779,11 +1873,11 @@
         },
         "responses": {
           "200": {
-            "description": "Slowdown key added successfully",
+            "description": "Throttle key added successfully",
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/SlowdownKey"
+                  "$ref": "#/components/schemas/ThrottleKey"
                 }
               }
             }
@@ -1859,7 +1953,7 @@
         }
       }
     },
-    "/slowdown/activate": {
+    "/throttle/activate": {
       "options": {
         "tags": [
           "CORS"
@@ -1878,10 +1972,10 @@
       },
       "patch": {
         "tags": [
-          "slowdown"
+          "throttle"
         ],
-        "summary": "Activate existing (previously deactivated) slowdown key",
-        "operationId": "activateSlowdownKey",
+        "summary": "Activate existing (previously deactivated) throttle key",
+        "operationId": "activateThrottleKey",
         "requestBody": {
           "content": {
             "text/plain": {
@@ -1894,7 +1988,7 @@
         },
         "responses": {
           "201": {
-            "description": "Slowdown key activated successfully",
+            "description": "Throttle key activated successfully",
             "content": {
               "application/json": {
                 "schema": {
@@ -1915,7 +2009,7 @@
             }
           },
           "404": {
-            "description": "Slowdown key not found",
+            "description": "Throttle key not found",
             "content": {
               "application/json": {
                 "schema": {
@@ -1959,7 +2053,7 @@
         }
       }
     },
-    "/slowdown/deactivate": {
+    "/throttle/deactivate": {
       "options": {
         "tags": [
           "CORS"
@@ -1978,10 +2072,10 @@
       },
       "patch": {
         "tags": [
-          "slowdown"
+          "throttle"
         ],
-        "summary": "Deactivate existing slowdown key",
-        "operationId": "deactivateSlowdownKey",
+        "summary": "Deactivate existing throttle key",
+        "operationId": "deactivateThrottleKey",
         "requestBody": {
           "content": {
             "text/plain": {
@@ -1994,7 +2088,7 @@
         },
         "responses": {
           "201": {
-            "description": "Slowdown key deactivated successfully",
+            "description": "Throttle key deactivated successfully",
             "content": {
               "application/json": {
                 "schema": {
@@ -2015,7 +2109,7 @@
             }
           },
           "404": {
-            "description": "Slowdown key not found",
+            "description": "Throttle key not found",
             "content": {
               "application/json": {
                 "schema": {
@@ -2050,100 +2144,6 @@
             "ApiGatewayKey": []
           }
         ],
-        "x-amazon-apigateway-integration": {
-          "httpMethod": "POST",
-          "type": "aws_proxy",
-          "uri": {
-            "Fn::Sub": "arn:${AWS::Partition}:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${OperationLambda}/invocations"
-          }
-        }
-      }
-    },
-    "/start_slowdown": {
-      "post": {
-        "tags": [
-          "slowdown"
-        ],
-        "summary": "Try to turn on slow mode",
-        "operationId": "startSlowdown",
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/SlowdownReqwest"
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "200": {
-            "description": "Slowdown started successfully",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Limits"
-                }
-              }
-            }
-          },
-          "401": {
-            "description": "Failed key verification",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
-                }
-              }
-            }
-          },
-          "403": {
-            "description": "Key is revoked",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
-                }
-              }
-            }
-          },
-          "404": {
-            "description": "Slowdown key not found",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "Internal server error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
-                }
-              }
-            }
-          }
-        },
-        "x-amazon-apigateway-integration": {
-          "httpMethod": "POST",
-          "type": "aws_proxy",
-          "uri": {
-            "Fn::Sub": "arn:${AWS::Partition}:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${OperationLambda}/invocations"
-          }
-        }
-      },
-      "options": {
-        "tags": [
-          "CORS"
-        ],
-        "summary": "CORS support",
-        "description": "Handles CORS preflight requests",
-        "parameters": [],
-        "responses": {},
         "x-amazon-apigateway-integration": {
           "httpMethod": "POST",
           "type": "aws_proxy",
@@ -2745,9 +2745,9 @@
             "nullable": true,
             "minimum": 0
           },
-          "slowModeInitiator": {
+          "throttleModeInitiator": {
             "type": "string",
-            "description": "Slowdown key initiated slowdown",
+            "description": "Throttle key initiated throttle",
             "nullable": true
           }
         }
@@ -3321,9 +3321,9 @@
             "nullable": true,
             "minimum": 0
           },
-          "slowModeInitiator": {
+          "throttleModeInitiator": {
             "type": "string",
-            "description": "Name of key which triggered slow mode (if slow mode is active)",
+            "description": "Name of key which triggered throttle mode (if throttle mode is active)",
             "nullable": true
           }
         }
@@ -3332,9 +3332,9 @@
         "type": "string",
         "description": "The raw payload of a new block event from a stacks node.\nThis is the raw JSON string that is sent to the webhook.\nIdeally, NewBlockEvent would be used directly, but because of the\nthe imported data types, we can't derive ToSchema for it to be used\nin the OpenAPI spec."
       },
-      "SlowdownKey": {
+      "ThrottleKey": {
         "type": "object",
-        "description": "Represents the slowdown key",
+        "description": "Represents the throttle key",
         "required": [
           "name",
           "hash"
@@ -3350,9 +3350,9 @@
           }
         }
       },
-      "SlowdownReqwest": {
+      "ThrottleReqwest": {
         "type": "object",
-        "description": "Represents the slowdown reqwest",
+        "description": "Represents the throttle reqwest",
         "required": [
           "hash",
           "secret"
